--- a/action.yml
+++ b/action.yml
@@ -16,24 +16,24 @@ runs:
       - name: Get code
         uses: actions/checkout@v3
       - name: Cache dependencies NPM
-        if: ${{ inputs.use-yarn }} == 'false'
+        if: inputs.use-yarn == 'false'
         id: cache
         uses: actions/cache@v3
         with:
           path: ${{ inputs.node-modules-path }}
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true' && ${{ inputs.use-yarn }} == 'false'
+        if: steps.cache.outputs.cache-hit != 'true' && inputs.use-yarn == 'false'
         run: npm ci
         shell: bash
       - name: Cache dependencies Yarn
-        if: ${{ inputs.use-yarn }} == 'true'
+        if: inputs.use-yarn == 'true'
         id: cache-yarn
         uses: actions/cache@v3
         with:
           path: ${{ inputs.node-modules-path }}
           key: deps-node-modules-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies Yarn
-        if: steps.cache-yarn.outputs.cache-hit != 'true' && ${{ inputs.use-yarn }} == 'true'
+        if: steps.cache-yarn.outputs.cache-hit != 'true' && inputs.use-yarn == 'true'
         run: yarn install --frozen-lockfile
         shell: bash
